--- a/assets/css/star.css
+++ b/assets/css/star.css
@@ -1,9 +1,10 @@
 .stars {
+  position: inherit;
   top: 0;
   left: 0;
   width: 100%;
   height: 120%;
-  transform: rotate(-30deg);
+  transform: rotate(-45deg);
 }
 
 .star {
@@ -31,130 +32,304 @@
   }
 }
 .star:nth-child(1) {
-  --star-tail-length: 7.13em;
-  --top-offset: 83.45vh;
-  --fall-duration: 11.806s;
-  --fall-delay: 8.771s;
+  --star-tail-length: 7.06em;
+  --top-offset: 26.62vh;
+  --fall-duration: 6.036s;
+  --fall-delay: 6.18s;
 }
 .star:nth-child(2) {
-  --star-tail-length: 7.31em;
-  --top-offset: 77vh;
-  --fall-duration: 10.49s;
-  --fall-delay: 9.847s;
+  --star-tail-length: 5.78em;
+  --top-offset: 72.99vh;
+  --fall-duration: 9.336s;
+  --fall-delay: 6.808s;
 }
 .star:nth-child(3) {
-  --star-tail-length: 5.23em;
-  --top-offset: 70.22vh;
-  --fall-duration: 7.489s;
-  --fall-delay: 2.021s;
+  --star-tail-length: 5.08em;
+  --top-offset: 10.19vh;
+  --fall-duration: 6.976s;
+  --fall-delay: 8.794s;
 }
 .star:nth-child(4) {
-  --star-tail-length: 5.19em;
-  --top-offset: 49.18vh;
-  --fall-duration: 9.784s;
-  --fall-delay: 2.246s;
+  --star-tail-length: 6.93em;
+  --top-offset: 31.58vh;
+  --fall-duration: 9.565s;
+  --fall-delay: 9.669s;
 }
 .star:nth-child(5) {
-  --star-tail-length: 6.79em;
-  --top-offset: 46.19vh;
-  --fall-duration: 10.051s;
-  --fall-delay: 3.021s;
+  --star-tail-length: 6.89em;
+  --top-offset: 32.11vh;
+  --fall-duration: 7.71s;
+  --fall-delay: 4.851s;
 }
 .star:nth-child(6) {
-  --star-tail-length: 7.16em;
-  --top-offset: 24.63vh;
-  --fall-duration: 8.827s;
-  --fall-delay: 9.92s;
+  --star-tail-length: 6.64em;
+  --top-offset: 6.14vh;
+  --fall-duration: 7.467s;
+  --fall-delay: 6.537s;
 }
 .star:nth-child(7) {
-  --star-tail-length: 6.01em;
-  --top-offset: 21.43vh;
-  --fall-duration: 9.04s;
-  --fall-delay: 1.392s;
+  --star-tail-length: 6.41em;
+  --top-offset: 99.55vh;
+  --fall-duration: 6.053s;
+  --fall-delay: 0.456s;
 }
 .star:nth-child(8) {
-  --star-tail-length: 5.99em;
-  --top-offset: 63.61vh;
-  --fall-duration: 10s;
-  --fall-delay: 6.781s;
+  --star-tail-length: 7.19em;
+  --top-offset: 28.87vh;
+  --fall-duration: 10.973s;
+  --fall-delay: 9.39s;
 }
 .star:nth-child(9) {
-  --star-tail-length: 6.24em;
-  --top-offset: 35.1vh;
-  --fall-duration: 6.365s;
-  --fall-delay: 8.734s;
+  --star-tail-length: 6.04em;
+  --top-offset: 93.12vh;
+  --fall-duration: 10.725s;
+  --fall-delay: 4.159s;
 }
 .star:nth-child(10) {
-  --star-tail-length: 6.92em;
-  --top-offset: 84.93vh;
-  --fall-duration: 8.934s;
-  --fall-delay: 2.492s;
+  --star-tail-length: 5.74em;
+  --top-offset: 62.09vh;
+  --fall-duration: 9.965s;
+  --fall-delay: 1.707s;
 }
 .star:nth-child(11) {
-  --star-tail-length: 7.38em;
-  --top-offset: 17.7vh;
-  --fall-duration: 6.46s;
-  --fall-delay: 2.807s;
+  --star-tail-length: 6.14em;
+  --top-offset: 56.01vh;
+  --fall-duration: 7.522s;
+  --fall-delay: 8.083s;
 }
 .star:nth-child(12) {
-  --star-tail-length: 7.09em;
-  --top-offset: 68.26vh;
-  --fall-duration: 7.929s;
-  --fall-delay: 2.353s;
+  --star-tail-length: 6.43em;
+  --top-offset: 95.77vh;
+  --fall-duration: 9.845s;
+  --fall-delay: 9.273s;
 }
 .star:nth-child(13) {
-  --star-tail-length: 5.24em;
-  --top-offset: 88.7vh;
-  --fall-duration: 7.475s;
-  --fall-delay: 7.66s;
+  --star-tail-length: 7.19em;
+  --top-offset: 61.8vh;
+  --fall-duration: 7.535s;
+  --fall-delay: 2.445s;
 }
 .star:nth-child(14) {
-  --star-tail-length: 5.45em;
-  --top-offset: 16.42vh;
-  --fall-duration: 7.269s;
-  --fall-delay: 9.838s;
+  --star-tail-length: 6.66em;
+  --top-offset: 17.38vh;
+  --fall-duration: 6.686s;
+  --fall-delay: 5.797s;
 }
 .star:nth-child(15) {
-  --star-tail-length: 6.12em;
-  --top-offset: 12.64vh;
-  --fall-duration: 7.038s;
-  --fall-delay: 7.162s;
+  --star-tail-length: 5.72em;
+  --top-offset: 37.88vh;
+  --fall-duration: 11.678s;
+  --fall-delay: 5.463s;
 }
 .star:nth-child(16) {
-  --star-tail-length: 5.81em;
-  --top-offset: 27.26vh;
-  --fall-duration: 11.569s;
-  --fall-delay: 4.939s;
+  --star-tail-length: 5.84em;
+  --top-offset: 60.73vh;
+  --fall-duration: 9.403s;
+  --fall-delay: 5.443s;
 }
 .star:nth-child(17) {
-  --star-tail-length: 5.49em;
-  --top-offset: 36.38vh;
-  --fall-duration: 8.913s;
-  --fall-delay: 4.445s;
+  --star-tail-length: 6.62em;
+  --top-offset: 33.44vh;
+  --fall-duration: 11.124s;
+  --fall-delay: 7.608s;
 }
 .star:nth-child(18) {
-  --star-tail-length: 5.68em;
-  --top-offset: 81.06vh;
-  --fall-duration: 11.091s;
-  --fall-delay: 2.339s;
+  --star-tail-length: 6.68em;
+  --top-offset: 75.17vh;
+  --fall-duration: 10.759s;
+  --fall-delay: 4.571s;
 }
 .star:nth-child(19) {
-  --star-tail-length: 6.58em;
-  --top-offset: 83.76vh;
-  --fall-duration: 10.608s;
-  --fall-delay: 4.24s;
+  --star-tail-length: 5.5em;
+  --top-offset: 5.09vh;
+  --fall-duration: 11.202s;
+  --fall-delay: 7.595s;
 }
 .star:nth-child(20) {
-  --star-tail-length: 5.45em;
-  --top-offset: 75.76vh;
-  --fall-duration: 7.064s;
-  --fall-delay: 5.416s;
+  --star-tail-length: 6.78em;
+  --top-offset: 27.89vh;
+  --fall-duration: 7.936s;
+  --fall-delay: 8.661s;
 }
 .star:nth-child(21) {
+  --star-tail-length: 5.04em;
+  --top-offset: 17.5vh;
+  --fall-duration: 10.653s;
+  --fall-delay: 5.259s;
+}
+.star:nth-child(22) {
+  --star-tail-length: 7.06em;
+  --top-offset: 56.65vh;
+  --fall-duration: 10.946s;
+  --fall-delay: 4.607s;
+}
+.star:nth-child(23) {
+  --star-tail-length: 6.63em;
+  --top-offset: 37.26vh;
+  --fall-duration: 9.991s;
+  --fall-delay: 9.692s;
+}
+.star:nth-child(24) {
+  --star-tail-length: 5.78em;
+  --top-offset: 71.22vh;
+  --fall-duration: 11.575s;
+  --fall-delay: 3.014s;
+}
+.star:nth-child(25) {
+  --star-tail-length: 6.87em;
+  --top-offset: 88.95vh;
+  --fall-duration: 11.778s;
+  --fall-delay: 5.68s;
+}
+.star:nth-child(26) {
+  --star-tail-length: 5em;
+  --top-offset: 97.47vh;
+  --fall-duration: 8.622s;
+  --fall-delay: 5.726s;
+}
+.star:nth-child(27) {
+  --star-tail-length: 5.53em;
+  --top-offset: 61.89vh;
+  --fall-duration: 7.685s;
+  --fall-delay: 7.134s;
+}
+.star:nth-child(28) {
+  --star-tail-length: 5.28em;
+  --top-offset: 81.43vh;
+  --fall-duration: 10.183s;
+  --fall-delay: 2.097s;
+}
+.star:nth-child(29) {
+  --star-tail-length: 5.91em;
+  --top-offset: 15.51vh;
+  --fall-duration: 8.541s;
+  --fall-delay: 3.713s;
+}
+.star:nth-child(30) {
+  --star-tail-length: 6.92em;
+  --top-offset: 34.22vh;
+  --fall-duration: 11.103s;
+  --fall-delay: 5.508s;
+}
+.star:nth-child(31) {
+  --star-tail-length: 6.46em;
+  --top-offset: 15.32vh;
+  --fall-duration: 6.565s;
+  --fall-delay: 0.419s;
+}
+.star:nth-child(32) {
+  --star-tail-length: 6em;
+  --top-offset: 36.97vh;
+  --fall-duration: 8s;
+  --fall-delay: 9.233s;
+}
+.star:nth-child(33) {
+  --star-tail-length: 5.49em;
+  --top-offset: 7.59vh;
+  --fall-duration: 7.717s;
+  --fall-delay: 9.828s;
+}
+.star:nth-child(34) {
+  --star-tail-length: 7.47em;
+  --top-offset: 48.64vh;
+  --fall-duration: 7.264s;
+  --fall-delay: 5.736s;
+}
+.star:nth-child(35) {
+  --star-tail-length: 7.01em;
+  --top-offset: 54.47vh;
+  --fall-duration: 10.234s;
+  --fall-delay: 0.293s;
+}
+.star:nth-child(36) {
+  --star-tail-length: 7.18em;
+  --top-offset: 32.66vh;
+  --fall-duration: 10.433s;
+  --fall-delay: 6.847s;
+}
+.star:nth-child(37) {
+  --star-tail-length: 6.69em;
+  --top-offset: 94.76vh;
+  --fall-duration: 7.481s;
+  --fall-delay: 6.457s;
+}
+.star:nth-child(38) {
+  --star-tail-length: 5.55em;
+  --top-offset: 40.3vh;
+  --fall-duration: 11.308s;
+  --fall-delay: 5.13s;
+}
+.star:nth-child(39) {
+  --star-tail-length: 6.04em;
+  --top-offset: 61.51vh;
+  --fall-duration: 8.973s;
+  --fall-delay: 8.994s;
+}
+.star:nth-child(40) {
+  --star-tail-length: 5.75em;
+  --top-offset: 10.86vh;
+  --fall-duration: 11.282s;
+  --fall-delay: 5.287s;
+}
+.star:nth-child(41) {
+  --star-tail-length: 5.12em;
+  --top-offset: 59.19vh;
+  --fall-duration: 8.601s;
+  --fall-delay: 5.762s;
+}
+.star:nth-child(42) {
+  --star-tail-length: 5.28em;
+  --top-offset: 46.81vh;
+  --fall-duration: 9.346s;
+  --fall-delay: 4.994s;
+}
+.star:nth-child(43) {
   --star-tail-length: 6.78em;
-  --top-offset: 34.52vh;
-  --fall-duration: 6.169s;
-  --fall-delay: 1.626s;
+  --top-offset: 96.72vh;
+  --fall-duration: 6.571s;
+  --fall-delay: 1.591s;
+}
+.star:nth-child(44) {
+  --star-tail-length: 5.09em;
+  --top-offset: 32.81vh;
+  --fall-duration: 10.537s;
+  --fall-delay: 2.498s;
+}
+.star:nth-child(45) {
+  --star-tail-length: 5.97em;
+  --top-offset: 74.24vh;
+  --fall-duration: 7.858s;
+  --fall-delay: 4.947s;
+}
+.star:nth-child(46) {
+  --star-tail-length: 5.86em;
+  --top-offset: 67.4vh;
+  --fall-duration: 8.586s;
+  --fall-delay: 7.834s;
+}
+.star:nth-child(47) {
+  --star-tail-length: 6.02em;
+  --top-offset: 3.67vh;
+  --fall-duration: 6.776s;
+  --fall-delay: 8.089s;
+}
+.star:nth-child(48) {
+  --star-tail-length: 5.64em;
+  --top-offset: 28.69vh;
+  --fall-duration: 10.569s;
+  --fall-delay: 1.751s;
+}
+.star:nth-child(49) {
+  --star-tail-length: 5.95em;
+  --top-offset: 88.78vh;
+  --fall-duration: 10.844s;
+  --fall-delay: 0.929s;
+}
+.star:nth-child(50) {
+  --star-tail-length: 7.41em;
+  --top-offset: 92.57vh;
+  --fall-duration: 10.764s;
+  --fall-delay: 9.88s;
 }
 .star::before, .star::after {
   position: absolute;
